<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/container_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/content_description_icon_app"
        app:srcCompat="@drawable/ic_koramail"
        />

    <TextView
        android:id="@+id/container_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_image"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_direction"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_direction"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textWebEmailAddress"
        android:textSize="20sp"
        tools:ignore="Autofill"
        />

    <EditText
        android:id="@+id/container_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_email"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        tools:ignore="Autofill"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/container_password"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#8BDADE"
        android:text="@string/login_login"
        />
</RelativeLayout>